--- a/ui5-local.yaml
+++ b/ui5-local.yaml
@@ -10,6 +10,7 @@ framework:
   libraries:
     - name: sap.m
     - name: sap.ui.core
+    - name: sap.f
     - name: sap.ushell
     - name: themelib_sap_horizon
 server:
