--- a/ui5.yaml
+++ b/ui5.yaml
@@ -4,15 +4,6 @@ specVersion: "4.0"
 metadata:
   name: ehsm898
 type: application
-framework:
-  name: SAPUI5
-  version: 1.120.14
-  libraries:
-    - name: sap.m
-    - name: sap.ui.core
-    - name: sap.f
-    - name: sap.ushell
-    - name: themelib_sap_horizon
 server:
   customMiddleware:
     - name: fiori-tools-proxy
@@ -23,7 +14,7 @@ server:
           path:
             - /resources
             - /test-resources
-          url: https://ui5.sap.com
+          url: https://sapui5.hana.ondemand.com
         backend:
           - path: /sap
             url: http://172.17.19.24:8000
